// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header default 1`] = `
<header>
  <header
    className="MuiPaper-root-9 MuiPaper-elevation4-15 MuiAppBar-root-1 MuiAppBar-positionStatic-5 MuiAppBar-colorDefault-6"
  >
    <div
      className="MuiToolbar-root-36 MuiToolbar-regular-38 MuiToolbar-gutters-37"
    >
      <h2
        className="MuiTypography-root-40 MuiTypography-title-46 MuiTypography-colorInherit-59"
      >
        Top rated movies
      </h2>
    </div>
  </header>
</header>
`;

exports[`Storyshots MovieListItem No image 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "lightblue",
      }
    }
  >
    Above
  </div>
  <div
    className="MuiPaper-root-160 MuiPaper-elevation1-163 MuiPaper-rounded-161 MuiCard-root-159 movie-list-item"
  >
    
    <div
      className="MuiCardContent-root-187"
    >
      <h2
        className="MuiTypography-root-188 MuiTypography-headline-193 MuiTypography-gutterBottom-205"
      >
        Pulp Fiction
      </h2>
      <p
        className="MuiTypography-root-188 MuiTypography-body1-197"
      >
        A burger-loving hit man, his philosophical partner, a drug-addled gangster's moll and a washed-up boxer converge in this sprawling, comedic crime caper. Their adventures unfurl in three stories that ingeniously trip back and forth in time.
      </p>
    </div>
    <div
      className="MuiCardActions-root-213"
    >
      <button
        className="MuiButtonBase-root-241 MuiButton-root-215 MuiButton-text-217 MuiButton-textPrimary-218 MuiButton-flat-220 MuiButton-flatPrimary-221 MuiButton-sizeSmall-238 MuiCardActions-action-214"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-216"
        >
          Learn More
        </span>
        <span
          className="MuiTouchRipple-root-244"
        />
      </button>
    </div>
  </div>
  <div
    style={
      Object {
        "backgroundColor": "lightblue",
      }
    }
  >
    Below
  </div>
</div>
`;

exports[`Storyshots MovieListItem With Knobs 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "lightblue",
      }
    }
  >
    Above
  </div>
  <div
    className="MuiPaper-root-252 MuiPaper-elevation1-255 MuiPaper-rounded-253 MuiCard-root-251 movie-list-item"
  >
    <div
      className="MuiCardMedia-root-279 movie-list-item-image"
      style={
        Object {
          "backgroundImage": "url(\\"//image.tmdb.org/t/p/w300/suaEOtk1N1sgg2MTM7oZd2cfVp3.jpg\\")",
        }
      }
      title="Pulp Fiction"
    />
    <div
      className="MuiCardContent-root-281"
    >
      <h2
        className="MuiTypography-root-282 MuiTypography-headline-287 MuiTypography-gutterBottom-299"
      >
        Pulp Fiction
      </h2>
      <p
        className="MuiTypography-root-282 MuiTypography-body1-291"
      >
        A burger-loving hit man, his philosophical partner, a drug-addled gangster&#39;s moll and a washed-up boxer converge in this sprawling, comedic crime caper. Their adventures unfurl in three stories that ingeniously trip back and forth in time.
      </p>
    </div>
    <div
      className="MuiCardActions-root-307"
    >
      <button
        className="MuiButtonBase-root-335 MuiButton-root-309 MuiButton-text-311 MuiButton-textPrimary-312 MuiButton-flat-314 MuiButton-flatPrimary-315 MuiButton-sizeSmall-332 MuiCardActions-action-308"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-310"
        >
          Learn More
        </span>
        <span
          className="MuiTouchRipple-root-338"
        />
      </button>
    </div>
  </div>
  <div
    style={
      Object {
        "backgroundColor": "lightblue",
      }
    }
  >
    Below
  </div>
</div>
`;

exports[`Storyshots MovieListItem default 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "lightblue",
      }
    }
  >
    Above
  </div>
  <div
    className="MuiPaper-root-66 MuiPaper-elevation1-69 MuiPaper-rounded-67 MuiCard-root-65 movie-list-item"
  >
    <div
      className="MuiCardMedia-root-93 movie-list-item-image"
      style={
        Object {
          "backgroundImage": "url(\\"//image.tmdb.org/t/p/w300/suaEOtk1N1sgg2MTM7oZd2cfVp3.jpg\\")",
        }
      }
      title="Pulp Fiction"
    />
    <div
      className="MuiCardContent-root-95"
    >
      <h2
        className="MuiTypography-root-96 MuiTypography-headline-101 MuiTypography-gutterBottom-113"
      >
        Pulp Fiction
      </h2>
      <p
        className="MuiTypography-root-96 MuiTypography-body1-105"
      >
        A burger-loving hit man, his philosophical partner, a drug-addled gangster's moll and a washed-up boxer converge in this sprawling, comedic crime caper. Their adventures unfurl in three stories that ingeniously trip back and forth in time.
      </p>
    </div>
    <div
      className="MuiCardActions-root-121"
    >
      <button
        className="MuiButtonBase-root-149 MuiButton-root-123 MuiButton-text-125 MuiButton-textPrimary-126 MuiButton-flat-128 MuiButton-flatPrimary-129 MuiButton-sizeSmall-146 MuiCardActions-action-122"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-124"
        >
          Learn More
        </span>
        <span
          className="MuiTouchRipple-root-152"
        />
      </button>
    </div>
  </div>
  <div
    style={
      Object {
        "backgroundColor": "lightblue",
      }
    }
  >
    Below
  </div>
</div>
`;

exports[`Storyshots MoviesList When loading 1`] = `
<div
  className="MuiLinearProgress-root-441 MuiLinearProgress-colorPrimary-442"
  role="progressbar"
>
  <div
    className="MuiLinearProgress-bar-449 MuiLinearProgress-barColorPrimary-450 MuiLinearProgress-bar1Indeterminate-452"
    style={Object {}}
  />
  <div
    className="MuiLinearProgress-bar-449 MuiLinearProgress-barColorPrimary-450 MuiLinearProgress-bar2Indeterminate-455"
    style={Object {}}
  />
</div>
`;

exports[`Storyshots MoviesList With error 1`] = `
<p
  className="MuiTypography-root-458 MuiTypography-body1-467 MuiTypography-colorError-482"
>
  Some error message
</p>
`;

exports[`Storyshots MoviesList With movies 1`] = `
<ul
  className="MuiGridList-root-346"
  style={
    Object {
      "margin": -2,
    }
  }
>
  <div
    className="MuiPaper-root-348 MuiPaper-elevation1-351 MuiPaper-rounded-349 MuiCard-root-347 movie-list-item"
  >
    <div
      className="MuiCardMedia-root-375 movie-list-item-image"
      style={
        Object {
          "backgroundImage": "url(\\"//image.tmdb.org/t/p/w300/ejdD20cdHNFAYAN2DlqPToXKyzx.jpg\\")",
        }
      }
      title="The Godfather"
    />
    <div
      className="MuiCardContent-root-377"
    >
      <h2
        className="MuiTypography-root-378 MuiTypography-headline-383 MuiTypography-gutterBottom-395"
      >
        The Godfather
      </h2>
      <p
        className="MuiTypography-root-378 MuiTypography-body1-387"
      >
        Spanning the years 1945 to 1955, a chronicle of the fictional Italian-American Corleone crime family. When organized crime family patriarch, Vito Corleone barely survives an attempt on his life, his youngest son, Michael steps in to take care of the would-be killers, launching a campaign of bloody revenge.
      </p>
    </div>
    <div
      className="MuiCardActions-root-403"
    >
      <button
        className="MuiButtonBase-root-431 MuiButton-root-405 MuiButton-text-407 MuiButton-textPrimary-408 MuiButton-flat-410 MuiButton-flatPrimary-411 MuiButton-sizeSmall-428 MuiCardActions-action-404"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-406"
        >
          Learn More
        </span>
        <span
          className="MuiTouchRipple-root-434"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiPaper-root-348 MuiPaper-elevation1-351 MuiPaper-rounded-349 MuiCard-root-347 movie-list-item"
  >
    <div
      className="MuiCardMedia-root-375 movie-list-item-image"
      style={
        Object {
          "backgroundImage": "url(\\"//image.tmdb.org/t/p/w300/suaEOtk1N1sgg2MTM7oZd2cfVp3.jpg\\")",
        }
      }
      title="Pulp Fiction"
    />
    <div
      className="MuiCardContent-root-377"
    >
      <h2
        className="MuiTypography-root-378 MuiTypography-headline-383 MuiTypography-gutterBottom-395"
      >
        Pulp Fiction
      </h2>
      <p
        className="MuiTypography-root-378 MuiTypography-body1-387"
      >
        A burger-loving hit man, his philosophical partner, a drug-addled gangster's moll and a washed-up boxer converge in this sprawling, comedic crime caper. Their adventures unfurl in three stories that ingeniously trip back and forth in time.
      </p>
    </div>
    <div
      className="MuiCardActions-root-403"
    >
      <button
        className="MuiButtonBase-root-431 MuiButton-root-405 MuiButton-text-407 MuiButton-textPrimary-408 MuiButton-flat-410 MuiButton-flatPrimary-411 MuiButton-sizeSmall-428 MuiCardActions-action-404"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-406"
        >
          Learn More
        </span>
        <span
          className="MuiTouchRipple-root-434"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiPaper-root-348 MuiPaper-elevation1-351 MuiPaper-rounded-349 MuiCard-root-347 movie-list-item"
  >
    <div
      className="MuiCardMedia-root-375 movie-list-item-image"
      style={
        Object {
          "backgroundImage": "url(\\"//image.tmdb.org/t/p/w300/poec6RqOKY9iSiIUmfyfPfiLtvB.jpg\\")",
        }
      }
      title="The Godfather: Part II"
    />
    <div
      className="MuiCardContent-root-377"
    >
      <h2
        className="MuiTypography-root-378 MuiTypography-headline-383 MuiTypography-gutterBottom-395"
      >
        The Godfather: Part II
      </h2>
      <p
        className="MuiTypography-root-378 MuiTypography-body1-387"
      >
        In the continuing saga of the Corleone crime family, a young Vito Corleone grows up in Sicily and in 1910s New York. In the 1950s, Michael Corleone attempts to expand the family business into Las Vegas, Hollywood and Cuba.
      </p>
    </div>
    <div
      className="MuiCardActions-root-403"
    >
      <button
        className="MuiButtonBase-root-431 MuiButton-root-405 MuiButton-text-407 MuiButton-textPrimary-408 MuiButton-flat-410 MuiButton-flatPrimary-411 MuiButton-sizeSmall-428 MuiCardActions-action-404"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-406"
        >
          Learn More
        </span>
        <span
          className="MuiTouchRipple-root-434"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiPaper-root-348 MuiPaper-elevation1-351 MuiPaper-rounded-349 MuiCard-root-347 movie-list-item"
  >
    <div
      className="MuiCardMedia-root-375 movie-list-item-image"
      style={
        Object {
          "backgroundImage": "url(\\"//image.tmdb.org/t/p/w300/gUdk0FMw38DSUqpnLLHCAWN60he.jpg\\")",
        }
      }
      title="Once Upon a Time in America"
    />
    <div
      className="MuiCardContent-root-377"
    >
      <h2
        className="MuiTypography-root-378 MuiTypography-headline-383 MuiTypography-gutterBottom-395"
      >
        Once Upon a Time in America
      </h2>
      <p
        className="MuiTypography-root-378 MuiTypography-body1-387"
      >
        A former Prohibition-era Jewish gangster returns to the Lower East Side of Manhattan over thirty years later, where he once again must confront the ghosts and regrets of his old life.
      </p>
    </div>
    <div
      className="MuiCardActions-root-403"
    >
      <button
        className="MuiButtonBase-root-431 MuiButton-root-405 MuiButton-text-407 MuiButton-textPrimary-408 MuiButton-flat-410 MuiButton-flatPrimary-411 MuiButton-sizeSmall-428 MuiCardActions-action-404"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-406"
        >
          Learn More
        </span>
        <span
          className="MuiTouchRipple-root-434"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiPaper-root-348 MuiPaper-elevation1-351 MuiPaper-rounded-349 MuiCard-root-347 movie-list-item"
  >
    <div
      className="MuiCardMedia-root-375 movie-list-item-image"
      style={
        Object {
          "backgroundImage": "url(\\"//image.tmdb.org/t/p/w300/bptfVGEQuv6vDTIMVCHjJ9Dz8PX.jpg\\")",
        }
      }
      title="Fight Club"
    />
    <div
      className="MuiCardContent-root-377"
    >
      <h2
        className="MuiTypography-root-378 MuiTypography-headline-383 MuiTypography-gutterBottom-395"
      >
        Fight Club
      </h2>
      <p
        className="MuiTypography-root-378 MuiTypography-body1-387"
      >
        A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground "fight clubs" forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion.
      </p>
    </div>
    <div
      className="MuiCardActions-root-403"
    >
      <button
        className="MuiButtonBase-root-431 MuiButton-root-405 MuiButton-text-407 MuiButton-textPrimary-408 MuiButton-flat-410 MuiButton-flatPrimary-411 MuiButton-sizeSmall-428 MuiCardActions-action-404"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-406"
        >
          Learn More
        </span>
        <span
          className="MuiTouchRipple-root-434"
        />
      </button>
    </div>
  </div>
</ul>
`;

exports[`Storyshots MoviesList default 1`] = `
<ul
  className="MuiGridList-root-345"
  style={
    Object {
      "margin": -2,
    }
  }
/>
`;
